--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -26,7 +26,7 @@
             padding: 20px;
         }
 
-        /* 返回主页按钮样式1 */
+        /* 返回主页按钮样式 */
         .back-home {
             display: block;
             margin: 20px auto;
@@ -44,7 +44,7 @@
             background-color: #0056b3;
         }
 
-        /* 新闻文章部分样式 */
+        /* 新闻文章部分样式（保持不变） */
         .photo-wall {
             display: flex;
             flex-wrap: wrap;
@@ -92,37 +92,45 @@
             opacity: 1;
         }
 
-        /* 杂志排版样式 */
-        .magazine-layout {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            grid-gap: 0; /* 去除间隔 */
-            grid-auto-rows: auto;
+        /* 瀑布流布局 */
+        .masonry-layout {
+            column-count: 4;       /* 每行大约4列，可根据屏幕宽度调整 */
+            column-gap: 20px;      /* 列间距 */
         }
 
-        .magazine-item {
-            position: relative;
-            overflow: hidden;
-            border-radius: 0; /* 去除圆角 */
-            box-shadow: none; /* 去除阴影 */
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-
-        .magazine-item:hover {
-            transform: scale(1.05);
-        }
-
-        .magazine-item img {
+        .masonry-item {
+            display: inline-block;
+            margin-bottom: 20px;
             width: 100%;
-            height: auto;
-            display: block;
+            break-inside: avoid;
+            position: relative;
         }
 
-        .magazine-item .magazine-details {
+        .masonry-item img {
+            width: 100%;
+            height: auto;          /* 高度自适应 */
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .masonry-item .magazine-details {
             padding: 10px;
             background: #fff;
             text-align: center;
+        }
+
+        /* 播放按钮覆盖层 */
+        .play-overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 2em;
+            color: white;
+            background: rgba(0,0,0,0.5);
+            border-radius: 50%;
+            padding: 10px;
+            pointer-events: none;
         }
 
         /* 模态框样式 */
@@ -160,7 +168,7 @@
     <h1>My Work</h1>
     <a href="../index.html" class="back-home">Back to Home</a>
 
-    <!-- News Articles Section -->
+    <!-- News Articles Section (保持不变) -->
     <section class="section">
         <h2>News Articles</h2>
         <div class="photo-wall">
@@ -192,171 +200,131 @@
     </section>
 
     <!-- Poster Design Section -->
-<section class="section">
-    <h2>Poster Design</h2>
-    <div class="magazine-layout">
-        <div class="magazine-item">
-            <img src="../images/poster1.png" alt="Poster 1">
+    <section class="section">
+        <h2>Poster Design</h2>
+        <div class="masonry-layout">
+            <div class="masonry-item"><img src="../images/poster1.png" alt="Poster 1"></div>
+            <div class="masonry-item"><img src="../images/poster2.png" alt="Poster 2"></div>
+            <div class="masonry-item"><img src="../images/poster3.png" alt="Poster 3"></div>
+            <div class="masonry-item"><img src="../images/poster4.png" alt="Poster 4"></div>
+            <div class="masonry-item"><img src="../images/poster5.png" alt="Poster 5"></div>
+            <div class="masonry-item"><img src="../images/poster6.png" alt="Poster 6"></div>
+            <div class="masonry-item"><img src="../images/poster7.png" alt="Poster 7"></div>
+            <div class="masonry-item"><img src="../images/poster8.png" alt="Poster 8"></div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/poster2.png" alt="Poster 2">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/poster3.png" alt="Poster 3">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/poster4.png" alt="Poster 4">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/poster5.png" alt="Poster 5">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/poster6.png" alt="Poster 6">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/poster7.png" alt="Poster 7">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/poster8.png" alt="Poster 8">
-        </div>
-    </div>
-</section>
-
-
+    </section>
 
 <!-- Photography Section -->
 <section class="section">
     <h2>Photography</h2>
-    <div class="magazine-layout">
-        <div class="magazine-item">
-            <img src="../images/photo1.jpg" alt="Photo 1">
+    <div class="masonry-layout">
+        <div class="masonry-item"><img src="../images/photo1.jpg" alt="Photo 1"></div>
+        <div class="masonry-item"><img src="../images/photo2.jpg" alt="Photo 2"></div>
+        <div class="masonry-item"><img src="../images/photo3.jpg" alt="Photo 3"></div>
+        <div class="masonry-item"><img src="../images/photo4.jpg" alt="Photo 4"></div>
+        <div class="masonry-item"><img src="../images/photo5.jpg" alt="Photo 5"></div>
+        <div class="masonry-item"><img src="../images/photo6.jpg" alt="Photo 6"></div>
+        <div class="masonry-item"><img src="../images/photo7.jpg" alt="Photo 7"></div>
+        <div class="masonry-item"><img src="../images/photo8.jpg" alt="Photo 8"></div>
+        <div class="masonry-item"><img src="../images/photo9.jpg" alt="Photo 9"></div>
+        <div class="masonry-item"><img src="../images/photo10.jpg" alt="Photo 10"></div>
+        <div class="masonry-item"><img src="../images/photo11.jpg" alt="Photo 11"></div>
+        <div class="masonry-item"><img src="../images/photo12.jpg" alt="Photo 12"></div>
+        <div class="masonry-item"><img src="../images/photo13.JPG" alt="Photo 13"></div>
+        <div class="masonry-item"><img src="../images/photo14.JPG" alt="Photo 14"></div>
+        <div class="masonry-item"><img src="../images/photo15.JPG" alt="Photo 15"></div>
+    </div>
+</section>
+
+<!-- Music/Video/Project Section -->
+<section class="section">
+    <h2>Music/Video/Project</h2>
+    <div class="masonry-layout">
+        <div class="masonry-item video-item" data-link="https://www.youtube.com/watch?v=M0Yke3TWfmM">
+            <img src="../images/music1.jpg" alt="Music 1">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">Easy Wealth TVC</div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/photo2.jpg" alt="Photo 2">
+        <div class="masonry-item video-item" data-link="https://www.bilibili.com/video/BV1wg411H7ZW/?spm_id_from=333.1387.homepage.video_card.click">
+            <img src="../images/music2.jpg" alt="Music 2">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">A Dreamy Summer</div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/photo3.jpg" alt="Photo 3">
+        <div class="masonry-item video-item" data-link="https://www.youtube.com/watch?v=DWQH679JIMg">
+            <img src="../images/video1.jpg" alt="Video 1">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">Spring Damp</div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/photo4.jpg" alt="Photo 4">
+        <div class="masonry-item video-item" data-link="https://www.bilibili.com/video/BV1Nz4y1C76k/?spm_id_from=333.1387.homepage.video_card.click">
+            <img src="../images/video2.jpg" alt="Video 2">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">The Youth in the Pandemic</div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/photo5.jpg" alt="Photo 5">
+        <div class="masonry-item video-item" data-link="https://www.bilibili.com/video/BV1Ms4y1C7tJ/?spm_id_from=333.1387.homepage.video_card.click">
+            <img src="../images/video3.jpg" alt="Video 3">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">Be a teacher, be a student</div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/photo6.jpg" alt="Photo 6">
+        <div class="masonry-item video-item" data-link="https://www.bilibili.com/video/BV16e411J736/?spm_id_from=333.1387.homepage.video_card.click">
+            <img src="../images/video4.jpg" alt="Video 4">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">School Games Record</div>
         </div>
-        <div class="magazine-item">
-            <img src="../images/photo7.jpg" alt="Photo 7">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo8.jpg" alt="Photo 8">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo9.jpg" alt="Photo 9">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo10.jpg" alt="Photo 10">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo11.jpg" alt="Photo 11">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo12.jpg" alt="Photo 12">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo13.JPG" alt="Photo 13">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo14.JPG" alt="Photo 14">
-        </div>
-        <div class="magazine-item">
-            <img src="../images/photo15.JPG" alt="Photo 15">
+        <div class="masonry-item video-item" data-link="https://www.youtube.com/watch?v=xpWXw67ZgsI">
+            <img src="../images/video5.jpg" alt="Video 5">
+            <div class="play-overlay">▶</div>
+            <div class="magazine-details">The Judgement Day</div>
         </div>
     </div>
 </section>
 
+<!-- Modal -->
+<div class="modal" id="modal">
+    <span class="modal-close" id="modal-close">&times;</span>
+    <img id="modal-image" src="" alt="Expanded Work">
+</div>
 
- 
-    <!-- Music/Video Section -->
-    <section class="section">
-        <h2>Music/Video/Project</h2>
-        <div class="magazine-layout">
-            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=M0Yke3TWfmM">
-                <img src="../images/music1.jpg" alt="Music 1">
-                <div class="magazine-details">Easy Wealth TVC</div>
-            </div>
-            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV1wg411H7ZW/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
-                <img src="../images/music2.jpg" alt="Music 2">
-                <div class="magazine-details">A Dreamy Summer</div>
-            </div>
-            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=DWQH679JIMg">
-                <img src="../images/video1.jpg" alt="Video 1">
-                <div class="magazine-details">Spring Damp</div>
-            </div>
-            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV1Nz4y1C76k/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
-                <img src="../images/video2.jpg" alt="Video 2">
-                <div class="magazine-details">the Youth in the Pandemic</div>
-            </div>
-            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV1Ms4y1C7tJ/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
-                <img src="../images/video3.jpg" alt="Video 3">
-                <div class="magazine-details">Be a teacher, be a student</div>
-            </div>
-            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV16e411J736/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
-                <img src="../images/video4.jpg" alt="Video 4">
-                <div class="magazine-details">School Games Record</div>
-            </div>
-            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=xpWXw67ZgsI">
-                <img src="../images/video5.jpg" alt="Video 5">
-                <div class="magazine-details">the Judgement Day</div>
-            </div>
-        </div>
-    </section>
+<script>
+    // Get all items
+    const items = document.querySelectorAll('.photo-item, .masonry-item');
+    const modal = document.getElementById('modal');
+    const modalImage = document.getElementById('modal-image');
+    const modalClose = document.getElementById('modal-close');
 
-    <!-- Modal -->
-    <div class="modal" id="modal">
-        <span class="modal-close" id="modal-close">&times;</span>
-        <img id="modal-image" src="" alt="Expanded Work">
-    </div>
+    // Click behavior
+    items.forEach(item => {
+        item.addEventListener('click', () => {
+            const link = item.dataset.link;
 
-    <script>
-        // Get all items
-        const items = document.querySelectorAll('.photo-item, .magazine-item');
-        const modal = document.getElementById('modal');
-        const modalImage = document.getElementById('modal-image');
-        const modalClose = document.getElementById('modal-close');
-
-        // Click to enlarge image
-        items.forEach(item => {
-            item.addEventListener('click', () => {
-                const imgSrc = item.querySelector('img').src;
-                const link = item.dataset.link;
-                modalImage.src = imgSrc;
-                modalImage.dataset.link = link;
-                modal.style.display = 'flex';
-            });
-        });
-
-        // Click modal image to open link
-        modalImage.addEventListener('click', () => {
-            const link = modalImage.dataset.link;
-            if (link) {
+            // For video items: open link directly
+            if (item.classList.contains('video-item') && link) {
                 window.open(link, '_blank');
+                return;
             }
-        });
 
-        // Close modal
-        modalClose.addEventListener('click', () => {
+            // For others: open modal (enlarge image)
+            const imgSrc = item.querySelector('img').src;
+            modalImage.src = imgSrc;
+            modalImage.dataset.link = link || '';
+            modal.style.display = 'flex';
+        });
+    });
+
+    // Click modal image to open link (if any)
+    modalImage.addEventListener('click', () => {
+        const link = modalImage.dataset.link;
+        if (link) window.open(link, '_blank');
+    });
+
+    // Close modal
+    modalClose.addEventListener('click', () => {
+        modal.style.display = 'none';
+    });
+
+    // Close modal by clicking background
+    modal.addEventListener('click', (e) => {
+        if (e.target === modal) {
             modal.style.display = 'none';
-        });
-
-        // Close modal by clicking background
-        modal.addEventListener('click', (e) => {
-            if (e.target === modal) {
-                modal.style.display = 'none';
-            }
-        });
-    </script>
-</body>
-
-</html>
+        }
+    });
+</script>
